# Web-app-for-image-classification

./: .env  .gitignore  README.md  fp_rest_net50model.ipynb  pyproject.toml
prediction_pic/: Dockerfile  func_tests.py  manage.py  pytests.py  requirements.txt
prediction_pic/prediction_app/: apps.py  forms.py  tests.py  urls.py  vgg_classification.py  views.py
prediction_pic/prediction_app/images/: cat.jfif  deer.jfif  dog.jfif  frof.jfif  horse.jfif
prediction_pic/prediction_app/static/css/: button.css  styles.css
prediction_pic/prediction_app/static/js/: button.js
prediction_pic/prediction_app/static/json/: facts.json
prediction_pic/prediction_app/templates/prediction_app/: home.html
prediction_pic/prediction_pic/: __init__.py  asgi.py  settings.py  urls.py  wsgi.py
